--- a/style.css
+++ b/style.css
@@ -7,25 +7,28 @@ nav {
 	height:15%;
 }
 img {
+	width:30%;
 	display: inline-block;
+	margin-top:2%;
+	margin-left:10%;
 }
 @font-face {
     font-family: Codelight;
     src: url(code_light.otf);
 }
 nav ul {
-	position: relative;
 	list-style-type: none;
 	width: 50%;
-	margin-left: 50%;
-	margin-top: -5%;
+	margin-top:-5%;
+	margin-left:45%;
 }
 nav ul li {
 	display: inline-block;
 	font-family: "Codelight";
-	padding: 2%;
+	padding: 1%;
 }
 nav ul li a {
 	text-decoration: none;
 	color:black;
+	font-size:1.1em;
 }
