--- a/style.css
+++ b/style.css
@@ -3,16 +3,23 @@ body {
 	margin:0;
 	padding: 0;
 }
+a {
+	text-decoration: none;
+	font-family: "Codelight";
+}
 nav {
 	height:20%;
 	width: 100%;
 	position: fixed;
+	background-color: #ecf0f1;
+	z-index: 100;
 }
 #logo {
 	display: inline-block;
 	margin-top:2%;
 	margin-left:10%;
 	max-width: 30%;
+	z-index: 0;
 }
 @font-face {
     font-family: Codelight;
@@ -29,50 +36,47 @@ nav {
 #nav li {
 	display: inline-block;
 	font-family: "Codelight";
+	font-weight: 550;
 	padding: 1%;
 }
-#nav li a {
-	text-decoration: none;
+#nav li a, section a {
 	color:black;
 	font-size:1.2em;
 }
-#nav li a:hover{color: #cc3366};
+#nav li a:hover {
+	color: #cc3366;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+body>img {
+	position: relative;
+	display:inline-block;
+	width:100%;
+	height:50%;
+	margin-top: 10%;
+}
+section {
+	margin-top:5%;
+}
+section a {
+	font-size:1.5em;
+	display:block;
+	font-weight: bold;
+	text-align: center;
+}
+hr {
+	width:20%;
+}
+section ul {
+	list-style-type: none;
+}
+section ul li {
+	display: inline-block;
+	padding-left:10%;
+	padding-right:10%; 
+}
+section ul li hr {
+	width:100px;
+}
 
 #categories	{
 	list-style-type: none;
@@ -87,3 +91,4 @@ nav {
 #categories li img {
 	display: block;
 	margin-left: -10%;
+}
