--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
 	background-color:#ecf0f1 ;
 	margin:0;
 	padding: 0;
+	overflow-x:hidden; 
 }
 a {
 	text-decoration: none;
@@ -48,12 +49,19 @@ nav {
 }
 
 body>img {
+position: relative;
+width: 100%;
+height: auto;
+margin-top: 0px;
+margin-bottom: 0px;
+}
+/*
 	position: relative;
 	display:inline-block;
 	width:100%;
 	height:50%;
 	margin-top: 10%;
-}
+	*/
 section {
 	margin-top:5%;
 }
@@ -90,5 +98,12 @@ section ul li hr {
 }
 #categories li img {
 	display: block;
-	margin-left: -10%;
+	text-align: center;
+}
+#projects {
+	position: relative;
+	display:inline-block;
+	width:98%;
+	height:50%;
+	margin-top: 10%;
 }
