--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ section ul li hr {
 #names li a:hover {
 	color:red;
 }
-
+@media all and (min-width:1920px){
 .circular {
 	margin-top: 0%;
 	width: 300px;
@@ -186,8 +186,9 @@ section ul li hr {
   	box-shadow:         inset 3px 3px 5px 6px #ccc;
 
 }
+
 #circles {
-	margin-top: 13%;
+	margin-top: 3%;
 	width: 100%;
 	height:100%;
 	text-align: center;
@@ -202,8 +203,45 @@ section ul li hr {
 	text-align: center;
 }
 #ctext li{	
-	padding: 5.5em;
+	padding: 5.7em;
 	font-size: 1.5em;
 	display: inline-block;
 	list-style-type: none;
+}
+}
+@media all and (min-width:800px) and (max-width:1450px) {
+.circular {
+	margin-top: 0%;
+	width: 240px;
+	height: 240px;
+	border-radius: 120px;
+	-webkit-border-radius: 120px;
+	-moz-border-radius: 120px;
+	-moz-box-shadow:    inset 3px 3px 5px 6px #ccc;
+  	-webkit-box-shadow: inset 3px 3px 5px 6px #ccc;
+  	box-shadow:         inset 3px 3px 5px 6px #ccc;
+
+}
+
+#circles {
+	margin-top: 3%;
+	width: 100%;
+	height:100%;
+	text-align: center;
+}
+#circles li{
+	display: inline-block;
+	list-style-type: none;
+	padding: 3em;
+}
+#ctext {
+	margin-top: -35%;
+	text-align: center;
+}
+#ctext li{	
+	padding: 5.7em;
+	font-size: 1.5em;
+	display: inline-block;
+	list-style-type: none;
+}
 }
