--- a/stylebg.css
+++ b/stylebg.css
@@ -3,38 +3,14 @@ body {
 	margin:0;
 	padding: 0;
 	overflow-x:hidden;
-	/*overflow-y:hidden;*/
+	overflow-y:hidden;
 }
 /* ---Begins CSS for 1920x1080--------------------------------------------------------------------------------*/ 
 @media all and (min-width:1920px){
 a {
 	text-decoration: none;
-	font-family: "Codelight";
+	font-family: "DejaVu";
 }
-/*.dim
-{
-			height:100%;
-			width:100%;
-			position:fixed;
-			left:0;
-			top:0;
-			z-index:2000;
-			background-color:#ecf0f1;
-			opacity: 1;
-
-}
-.dim:hover
-{
-			opacity: 0;
-			width: 0%;
-			height: 0%;
-			-webkit-transition: all 1s ease;
-     		-moz-transition: all 2s ease;
-       		-o-transition: all 2s ease;
-      		-ms-transition: all 2s ease;
-          	transition: all 2s ease;
-
-}*/
 nav {
 	height:17%;
 	width: 100%;
@@ -50,12 +26,11 @@ nav {
 	z-index: 0;
 }
 @font-face {
-    font-family: Codelight;
-    src: url(code_light.otf);
+    font-family: DejaVu;
+    src: url(DejaVuSans.ttf);
 }
 #nav {
 	list-style-type: none;
-	font-weight: 900;
 	max-width: 50%;
 	margin-top:-4%;
 	margin-left:auto;
@@ -63,8 +38,7 @@ nav {
 }
 #nav li {
 	display: inline-block;
-	font-family: "Codelight";
-	font-weight: 550;
+	font-family: "DejaVu";
 	padding: 2%;
 }
 #nav li a, section a {
@@ -75,10 +49,9 @@ nav {
 	color: #cc3366;
 }
 #ArchDes{
-	font-family: "Codelight";
+	font-family: "DejaVu";
 	font-size:1.5em;
 	display:block;
-	font-weight: bold;
 	text-align: center;
 }
 body>img {
@@ -106,7 +79,6 @@ section a:hover{
 section a {
 	font-size:1.5em;
 	display:block;
-	font-weight: bold;
 	text-align: center;
 }
 hr {
@@ -127,13 +99,13 @@ section ul li hr {
 #categories	{
 	list-style-type: none;
 	margin-top: 10%;
-	padding: 2.11%;
 }
 #categories li {
 	display: inline-block;
 	width: 14%;
 	height: 14%;
-	margin-top: 5%;
+	margin-top: 8%;
+	margin-left: -10%;
 }
 /*#categories li img {
 	display: block;
@@ -193,13 +165,12 @@ section ul li hr {
 #names {
 	list-style-type: none;
 	display: block;
-	font-family:"CodeLight";
+	font-family:"DejaVu";
 	font-size: 1.5em;
-	font-weight: bold;
 }
 #names li{
 	display: inline-block;
-	padding: 3.6em;
+	padding: 3.65em;
 	margin-left: -2%;
 	margin-top: -10%
 }
@@ -216,11 +187,9 @@ section ul li hr {
 	border-radius: 150px;
 	-webkit-border-radius: 150px;
 	-moz-border-radius: 150px;
-  	transform:scale(1);
-    -ms-transform:scale(1); 
-    -moz-transform:scale(1); 
-    -webkit-transform:scale(1); 
-    -o-transform:scale(1);
+	-moz-box-shadow:    inset 3px 3px 5px 6px #ccc;
+  	-webkit-box-shadow: inset 3px 3px 5px 6px #ccc;
+  	box-shadow:         inset 3px 3px 5px 6px #ccc;
 
 }
 
@@ -236,18 +205,14 @@ section ul li hr {
 	padding: 3em;
 }
 #ctext {
-	margin-top: -30%;
+	margin-top: -35%;
 	text-align: center;
-	width: 100%;
-	height:25%;
 }
 #ctext li{	
+	padding: 5.7em;
 	font-size: 1.5em;
 	display: inline-block;
 	list-style-type: none;
-	padding: 0.1em;
-	font-weight: bold;
-	width: 396px;
 }
 #ctext li a{
 	color: black;
@@ -256,7 +221,7 @@ section ul li hr {
 	color: #cc3366;
 }
 #map_canvas {
-	margin-top:2.6%;
+	margin-top:3.5%;
     width: 1900px;
     height: 400px;
     background-color: #CCC;
@@ -264,21 +229,19 @@ section ul li hr {
  #adress li{
  	margin-top: 2%;
  	display:inline-block;
- 	font-size: 1.5em;
- 	font-weight: bold;
-	padding: 4em;
+ 	font-size: 1.3em;
  }
  #adress li a{
  	color: black;
+ 	padding: 3em;
  }
-
 }
 /* ---Begins CSS for 1280x1024-------------------------------------------------------------------------------- */ 
 
 @media all and (min-width:800px) and (max-width:1280px) {
 a {
 	text-decoration: none;
-	font-family: "Codelight";
+	font-family: "DejaVu";
 }
 nav {
 	height:17%;
@@ -295,12 +258,11 @@ nav {
 	z-index: 0;
 }
 @font-face {
-    font-family: Codelight;
-    src: url(code_light.otf);
+    font-family: DejaVu;
+    src: url(DejaVuSans.ttf);
 }
 #nav {
 	list-style-type: none;
-	font-weight: 900;
 	max-width: 50%;
 	margin-top:-4%;
 	margin-left:auto;
@@ -308,8 +270,7 @@ nav {
 }
 #nav li {
 	display: inline-block;
-	font-family: "Codelight";
-	font-weight: 550;
+	font-family: "DejaVu";
 	padding: 0.85%;
 }
 #nav li a, section a {
@@ -320,10 +281,9 @@ nav {
 	color: #cc3366;
 }
 #ArchDes{
-	font-family: "Codelight";
+	font-family: "DejaVu";
 	font-size:1.5em;
 	display:block;
-	font-weight: bold;
 	text-align: center;
 }
 body>img {
@@ -351,7 +311,6 @@ section a:hover{
 section a {
 	font-size:1.5em;
 	display:block;
-	font-weight: bold;
 	text-align: center;
 }
 hr {
@@ -437,9 +396,8 @@ section ul li hr {
 #names {
 	list-style-type: none;
 	display: block;
-	font-family:"CodeLight";
+	font-family:"DejaVu";
 	font-size: 1.5em;
-	font-weight: bold;
 }
 #names li{
 	display: inline-block;
@@ -497,7 +455,6 @@ section ul li hr {
  	margin-top: 2%;
  	display:inline-block;
  	font-size: 1.3em;
- 	font-weight: bold;
  }
  #adress li a{
  	color: black;
