Images are still hardcoded, but the project names and descriptions are extracted from the db. Import the database with phpmyadmin and run the indeh.html from localhost (start apache and mysql first)

--- a/style.css
+++ b/style.css
@@ -81,6 +81,14 @@ nav {
 	font-weight: bold;
 	text-align: center;
 }
+
+/*
+	This is temporary Projects.php css;
+*/
+#CatContainer{
+	position: fixed;
+	top: 250px;	
+}
 body>img {
 position: relative;
 width: 100%;
@@ -326,6 +334,13 @@ nav {
 	display:block;
 	font-weight: bold;
 	text-align: center;
+}
+/*
+	This is temporary Projects.php css;
+*/
+#CatContainer{
+	position: fixed;
+	top: 250px;	
 }
 body>img {
 position: relative;
