--- a/style_projects.css
+++ b/style_projects.css
@@ -14,7 +14,6 @@ a {
 }
 ul {
 	list-style: none;
-	position: relative;
 }
 #logo {
 	margin-left:2%;
@@ -47,13 +46,7 @@ nav {
 #subList {
 	display: none;
 }
-#nav>li:nth-of-type(2):hover>#subList {
-	display: block;
-	position: absolute;
-	background-color: #ecf0f1;
-	padding-right:50%;
-	text-align: center;
-}
+
 
 #nav li a:hover {
 	color: #cc3366;
@@ -68,4 +61,8 @@ nav {
 	width: 100%;
 	text-align: center;
 }
+#nav>li:nth-of-type(2):hover {
+	cursor: pointer;
+}
+
 
