--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@ body {
 	margin:0;
 	padding: 0;
 	overflow-x:hidden;
-	/*overflow-y:hidden;*/
+	overflow-y:scroll;
 }
 /* ---Begins CSS for 1920x1080--------------------------------------------------------------------------------*/ 
-@media screen and (min-aspect-ratio: 16/10) {
+@media only screen and (min-width : 1824px) {
 a {
 	text-decoration: none;
 	font-family: "Codelight";
@@ -164,19 +164,6 @@ section ul li hr {
 
 }*/
 
-.circular:hover {
-    cursor: pointer;
-    transform:scale(1.2);
-    -ms-transform:scale(1.2); 
-    -moz-transform:scale(1.2); 
-    -webkit-transform:scale(1.2); 
-    -o-transform:scale(1.2);
-    -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    -o-transition: all 1s ease;
-    -ms-transition: all 1s ease;
-    transition: all 1s ease;
-}
 
 .grow img {
  	height: 725px;
@@ -225,14 +212,23 @@ section ul li hr {
 	border-radius: 150px;
 	-webkit-border-radius: 150px;
 	-moz-border-radius: 150px;
-  	transform:scale(1);
-    -ms-transform:scale(1); 
-    -moz-transform:scale(1); 
-    -webkit-transform:scale(1); 
-    -o-transform:scale(1);
+    overflow: auto;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
 
 }
+.circular:hover {
+    cursor: pointer;
+    transform:scale(1.2);
+    -ms-transform:scale(1.2); 
+    -moz-transform:scale(1.2); 
+    -webkit-transform:scale(1.2); 
+    -o-transform:scale(1.2);
 
+}
 #circles {
 	margin-top: 9%;
 	width: 100%;
@@ -245,7 +241,7 @@ section ul li hr {
 	padding: 3em;
 }
 #ctext {
-	margin-top: -30%;
+	margin-top: -35%;
 	text-align: center;
 	width: 100%;
 	height:25%;
@@ -265,7 +261,7 @@ section ul li hr {
 	color: #cc3366;
 }
 #map_canvas {
-	margin-top:2.6%;
+	margin-top:7.6%;
     width: 1900px;
     height: 400px;
     background-color: #CCC;
@@ -280,8 +276,55 @@ section ul li hr {
  #adress li a{
  	color: black;
  }
-
+#wrapper {
+	display: none;
 }
+#pic {
+	width:40%;
+	display: block;
+	margin:0 auto;
+	position: fixed;
+	top:50%;
+	left:31%;
+  	transform: translateY(-50%);
+  	z-index:    1001;
+  	opacity:    1;
+}
+#walterwhite {
+  opacity:    1; 
+  background: white; 
+  width:      100%;
+  height:     100%; 
+  z-index:    1000;
+  top:        0; 
+  left:       0; 
+  position:   fixed; 
+}
+#wrapper {
+	display: block; /*change to none*/
+}
+#pic {
+	width:40%;
+	display: block;
+	margin:0 auto;
+	position: fixed;
+	top:50%;
+	left:31%;
+  	transform: translateY(-50%);
+  	z-index:    1001;
+  	opacity:    1;
+}
+#walterwhite {
+  opacity:    0;  /* change to 1*/
+  background: white; 
+  width:      100%;
+  height:     100%; 
+  z-index:    1000;
+  top:        0; 
+  left:       0; 
+  position:   fixed; 
+}
+
 /* ---Begins CSS for 1280x1024-------------------------------------------------------------------------------- */ 
 
 @media screen and (min-aspect-ratio: 5/4) and (max-aspect-ratio: 16/9){
@@ -530,4 +573,325 @@ section ul li hr {
  	color: black;
  	padding: 3em;
  }
+ #wrapper {
+	display: block; /*change to none*/
+}
+#pic {
+	width:40%;
+	display: block;
+	margin:0 auto;
+	position: fixed;
+	top:50%;
+	left:31%;
+  	transform: translateY(-50%);
+  	z-index:    1001;
+  	opacity:    1;
+}
+#walterwhite {
+  opacity:    0;  /* change to 1*/
+  background: white; 
+  width:      100%;
+  height:     100%; 
+  z-index:    1000;
+  top:        0; 
+  left:       0; 
+  position:   fixed; 
+}
+
+}
+/* ---Begins CSS for 1280x800-------------------------------------------------------------------------------- */ 
+@media only screen and (min-width: 1224px) and (max-width: 1280px){
+a {
+	text-decoration: none;
+	font-family: "Codelight";
+}
+/*.dim
+{
+			height:100%;
+			width:100%;
+			position:fixed;
+			left:0;
+			top:0;
+			z-index:2000;
+			background-color:#ecf0f1;
+			opacity: 1;
+
+}
+.dim:hover
+{
+			opacity: 0;
+			width: 0%;
+			height: 0%;
+			-webkit-transition: all 1s ease;
+     		-moz-transition: all 2s ease;
+       		-o-transition: all 2s ease;
+      		-ms-transition: all 2s ease;
+          	transition: all 2s ease;
+
+}*/
+nav {
+	height:17%;
+	width: 100%;
+	position: fixed;
+	background-color: #ecf0f1;
+	z-index: 100;
+}
+#logo {
+	display: inline-block;
+	margin-top:1%;
+	margin-left:10%;
+	max-width: 30%;
+	z-index: 0;
+}
+@font-face {
+    font-family: Codelight;
+    src: url(code_light.otf);
+}
+#nav {
+	list-style-type: none;
+	font-weight: 900;
+	max-width: 50%;
+	margin-top:-5%;
+	margin-left:auto;
+	margin-right:5%;
+}
+#nav li {
+	display: inline-block;
+	font-family: "Codelight";
+	font-weight: 550;
+	padding: 2%;
+}
+#nav li a, section a {
+	color:black;
+	font-size:1.2em;
+}
+#nav li a:hover {
+	color: #cc3366;
+}
+#ArchDes{
+	font-family: "Codelight";
+	font-size:1.5em;
+	display:block;
+	font-weight: bold;
+	text-align: center;
+}
+
+/*
+	This is temporary Projects.php css;
+*/
+#CatContainer{
+	position: fixed;
+	top: 250px;	
+}
+#building {
+position: relative;
+width: 100%;
+height: auto;
+margin-top: 0px;
+margin-bottom: 0px;
+}
+/*
+	position: relative;
+	display:inline-block;
+	width:100%;
+	height:50%;
+	margin-top: 10%;
+	*/
+section {
+	position: relative;
+	margin-top:3%;
+	text-align: center;
+}
+section a:hover{
+	color: #cc3366;
+}
+section a {
+	font-size:1.5em;
+	display:block;
+	font-weight: bold;
+	text-align: center;
+}
+hr {
+	width:20%;
+}
+section ul {
+	list-style-type: none;
+	width:100%;
+}
+section ul li {
+	display: inline-block;
+	padding-left:10%;
+	padding-right:10%;
+}
+section ul li hr {
+	width:100px;
+}
+
+#categories	{
+	list-style-type: none;
+	margin-top: 10%;
+	padding: 2.11%;
+}
+#categories li {
+	display: inline-block;
+	width: 14%;
+	height: 14%;
+	margin-top: 5%;
+}
+/*#categories li img {
+	display: block;
+	text-align: center;
+}*/
+/*#projects {
+	display:inline-block;
+	width:98%;
+	height:60%;
+	margin-top: -5%;
+}*/
+/*#categories li div{	
+	margin-top: 2%;
+	display: inline-block;
+	list-style-type: none;
+	font-family: "Codelight";
+	font-weight:bold;
+	font-size: 1.5em;
+
+}*/
+
+
+.grow img {
+ 	height: 515px;
+ 	width: 188px;
+ 
+  -webkit-transition: all 1s ease;
+     -moz-transition: all 1s ease;
+       -o-transition: all 1s ease;
+      -ms-transition: all 1s ease;
+          transition: all 1s ease;
+}
+ 
+.grow img:hover {
+  height: 535px;
+  width: 196px;
+}
+.pic {
+ 	height: 515px;
+ 	width: 188px;
+  overflow: hidden;
+
+}
+#names {
+	list-style-type: none;
+	display: block;
+	font-family:"CodeLight";
+	font-size: 1.2em;
+	font-weight: bold;
+}
+#names li{
+	display: inline-block;
+	padding: 2.78em;
+	margin-left: -2%;
+	margin-top: -10%
+}
+#names li a{
+	color:black;
+}
+#names li a:hover {
+	color:#cc3366;
+}
+.circular {
+	margin-top: 0%;
+	width: 200px;
+	height: 200px;
+	border-radius: 150px;
+	-webkit-border-radius: 150px;
+	-moz-border-radius: 150px;
+    overflow: auto;
+    transition:all 1s;
+
+}
+.circular:hover {
+    cursor: pointer;
+    transform:scale(1.2);
+    -ms-transform:scale(1.2); 
+    -moz-transform:scale(1.2); 
+    -webkit-transform:scale(1.2); 
+    -o-transform:scale(1.2);
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+}
+
+#circles {
+	margin-top: 9%;
+	width: 100%;
+	height:100%;
+	text-align: center;
+}
+#circles li{
+	display: inline-block;
+	list-style-type: none;
+	padding: 3em;
+}
+#ctext {
+	margin-top: -37%;
+	width: 100%;
+	height:25%;
+	text-align: center;
+}
+#ctext li{	
+	font-size: 1.2em;
+	display: inline-block;
+	list-style-type: none;
+	padding: 5.1em;
+	font-weight: bold;
+	width: 100px;
+}
+#ctext li a{
+	color: black;
+}
+#ctext li a:hover{
+	color: #cc3366;
+}
+#map_canvas {
+	margin-top:10%;
+    width: 1270px;
+    height: 330px;
+    background-color: #CCC;
+  }
+ #adress li{
+ 	margin-top: 2%;
+ 	display:inline-block;
+ 	font-size: 1.3em;
+ 	font-weight: bold;
+	padding: 2em;
+ }
+ #adress li a{
+ 	color: black;
+ }
+#wrapper {
+	display: block; /*change to none*/
+}
+#pic {
+	width:40%;
+	display: block;
+	margin:0 auto;
+	position: fixed;
+	top:50%;
+	left:31%;
+  	transform: translateY(-50%);
+  	z-index:    1001;
+  	opacity:    1;
+}
+#walterwhite {
+  opacity:    0;  /* change to 1*/
+  background: white; 
+  width:      100%;
+  height:     100%; 
+  z-index:    1000;
+  top:        0; 
+  left:       0; 
+  position:   fixed; 
 }
