--- a/style.css
+++ b/style.css
@@ -638,7 +638,7 @@ section ul li hr {
 }
 #map_canvas {
 	margin-top: 8em;
-    width: 1900px;
+    width: 100%;
     height: 40em;
     background-color: #CCC;
   }
