--- a/style_projects.css
+++ b/style_projects.css
@@ -1,68 +1,70 @@
+@font-face {
+    font-family: Codelight;
+    src: url(code_light.otf);
+}
+#logo {
+	width: 77%;
+	margin-left: 6%;
+	margin-top: -3%;
+	padding-top:21px;
+	padding-bottom: 18px;
+	padding-left:10px;
+	padding-right:10px;
+}
 body {
 	margin:0;
 	padding:0;
-	background-color: #ecf0f1;
-	font-family: calibri;
-}
-@font-face {
-	font-family:codelight;
-	src: url(code_light.otf);
-}
-a {
-	text-decoration: none;
-	color:black;
-}
-ul {
-	list-style: none;
-}
-#logo {
-	margin-left:2%;
-	margin-top: 1%;
+	background-color:#ECF0F1;
+	overflow-x:hidden;
 }
 nav {
 	position: fixed;
-	top:0%;
-	background-color: #ecf0f1;
-	width:100%;
-	height:15vh;
+	width: 100%;
+	height: 16%;
+	background-color:#ecf0f1;
+	z-index: 4000;
 }
-#nav {
-	/*Position*/
-	position: relative;
-	/*box-model*/
-	width:50%;
-	margin-top:-4%;
-	margin-left:50%;
-
-	/*other stuff*/
-	font-family: codelight;
-	font-weight: bold;
+nav>a {
+	display: inline-block;
+	margin-top:10px;
+	margin-left:5%;
 }
-#nav>li {
-	position: relative;
-	/*box-model*/
+#nav li {
 	display: inline-block;
 }
-#subList {
-	display: none;
+#nav>li>a, #nav li[onclick] {
+	text-decoration: none;
+	color:black;
+	font-family: Codelight;
 }
-
-
-#nav li a:hover {
+#nav li[onclick] {
 	color: #cc3366;
-}
-#catName {
-	text-align: center;
-}
-#catContainer {
-	margin-top:15%;
-}
-#catContent {
-	width: 100%;
-	text-align: center;
-}
-#nav>li:nth-of-type(2):hover {
+	font-weight: bold;
 	cursor: pointer;
+	-webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
 }
-
+#nav li a:hover {
+	color:#cc3366;
+}
+#nav {
+	position: absolute;
+	top:30%;
+	left:50%;
+}
+#subList {
+	font-weight: normal;
+	width:590px;
+	position: absolute;
+	margin-left:-200px;
+	margin-top:5%;
+}
+#subList li a {
+	text-decoration: none;
+	color:black;
+}
 
