--- a/style_project1.css
+++ b/style_project1.css
@@ -119,7 +119,6 @@ margin-bottom: 0px;
 	margin-top: 10%;
 	*/
 section {
-	мар
 	position: relative;
 	margin-top:3%;
 	text-align: center;
@@ -356,7 +355,7 @@ section ul li hr {
  	color: black;
  }
 #wrapper {
-	display: block;
+	display: none;
 }
 #pic {
 	width:40%;
@@ -380,7 +379,7 @@ section ul li hr {
   position:   fixed; 
 }
 #wrapper {
-	display: none; /*change to none*/
+	display: block; /*change to none*/
 }
 #pic {
 	width:40%;
@@ -394,7 +393,7 @@ section ul li hr {
   	opacity:    1;
 }
 #walterwhite {
-  opacity:    1;  /* change to 1*/
+  opacity:    0;  /* change to 1*/
   background: white; 
   width:      100%;
   height:     100%; 
@@ -1029,7 +1028,7 @@ section ul li hr {
   	opacity:    1;
 }
 #walterwhite {
-  opacity:    1;  /* change to 1*/
+  opacity:    0;  /* change to 1*/
   background: white; 
   width:      100%;
   height:     100%; 
