--- a/style_projects2.css
+++ b/style_projects2.css
@@ -35,6 +35,15 @@ a {
           	transition: all 2s ease;
 
 }*/
+.namers {
+	font-size: 1.5em;
+	font-weight: bold;
+	margin-top: 50px;
+		color: black;
+}
+.namers:hover{
+	color:#cc3366; 
+}
 #topnav {
 	height: 150px;
 	width: 100%;
@@ -67,7 +76,7 @@ a {
 	font-weight: 550;
 	padding: 2%;
 }
-#nav li a, section a {
+.nav a{
 	color:black;
 	font-size:1.2em;
 }
@@ -88,6 +97,34 @@ a {
 	font-size: 1.3em;
 	text-align: center;
 }*/
+#red a{
+	color: #cc3366;
+	font-size: 1.1em;
+}
+#red2 a{
+	color: #cc3366;
+	font-size: 1.2em;
+}
+#mininav {
+	list-style-type: none;
+	font-weight: 900;
+	max-width: 80%;
+	margin-top:-30px;
+	margin-left:650px;
+}
+#mininav li {
+	display: inline-block;
+	font-family: "Codelight";
+	font-weight: 550;
+	padding: 1%;
+}
+.mininav a{
+	color:black;
+	font-size:1.1em;
+}
+#mininav li a:hover {
+	color: #cc3366;
+}
 #ArchDes{
 	margin-top: 120px;
 	font-family: "Codelight";
@@ -119,7 +156,6 @@ margin-bottom: 0px;
 	margin-top: 10%;
 	*/
 section {
-	мар
 	position: relative;
 	margin-top:3%;
 	text-align: center;
@@ -356,7 +392,7 @@ section ul li hr {
  	color: black;
  }
 #wrapper {
-	display: block;
+	display: none;
 }
 #pic {
 	width:40%;
@@ -380,7 +416,7 @@ section ul li hr {
   position:   fixed; 
 }
 #wrapper {
-	display: none; /*change to none*/
+	display: block; /*change to none*/
 }
 #pic {
 	width:40%;
@@ -394,7 +430,7 @@ section ul li hr {
   	opacity:    1;
 }
 #walterwhite {
-  opacity:    1;  /* change to 1*/
+  opacity:    0;  /* change to 1*/
   background: white; 
   width:      100%;
   height:     100%; 
@@ -429,6 +465,7 @@ nav {
     font-family: Codelight;
     src: url(code_light.otf);
 }
+
 #nav {
 	list-style-type: none;
 	font-weight: 900;
@@ -727,6 +764,10 @@ a {
     font-family: Codelight;
     src: url(code_light.otf);
 }
+.nav a{
+	color:black;
+	font-size:1.2em;
+}
 #nav {
 	list-style-type: none;
 	font-weight: 900;
@@ -735,17 +776,47 @@ a {
 	margin-left:auto;
 	margin-right:5%;
 }
+.namers {
+	font-size: 1.5em;
+	font-weight: bold;
+	margin-top: 50px;
+		color: black;
+}
+.namers:hover{
+	color:#cc3366; 
+}
 #nav li {
 	display: inline-block;
 	font-family: "Codelight";
 	font-weight: 550;
 	padding: 2%;
 }
-#nav li a, section a {
-	color:black;
-	font-size:1.2em;
+#red a{
+	color: #cc3366;
+	font-size: 1em;
 }
-#nav li a:hover {
+#red2 a{
+	color: #cc3366;
+	font-size: 1.1em;
+}
+#mininav {
+	list-style-type: none;
+	font-weight: 900;
+	max-width: 80%;
+	margin-top:-20px;
+	margin-left:300px;
+}
+#mininav li {
+	display: inline-block;
+	font-family: "Codelight";
+	font-weight: 550;
+	padding: 1%;
+}
+.mininav a{
+	color:black;
+	font-size:1em;
+}
+#mininav li a:hover {
 	color: #cc3366;
 }
 #ArchDes{
@@ -1029,7 +1100,7 @@ section ul li hr {
   	opacity:    1;
 }
 #walterwhite {
-  opacity:    1;  /* change to 1*/
+  opacity:    0;  /* change to 1*/
   background: white; 
   width:      100%;
   height:     100%; 
